# orion

./: .gitignore  .gitmodules  pyproject.toml
configs/: lola-lgo.yml  lola-ofhe.yml
orion/backend/openfhe/: CMakeLists.txt  bindings.py  orion_openfhe_scheme.cpp
orion/backend/openfhe/examples/: CMakeLists.txt  build.sh  run.sh  simple-real-numbers.cpp
orion/backend/openfhe/include/: bootstrapper.hpp  encoder.hpp  encryptor.hpp  evaluator.hpp  keygenerator.hpp  linear_transform.hpp  minheap.hpp  orion_openfhe.hpp  polyeval.hpp  scheme.hpp  tensors.hpp  utils.hpp
orion/backend/openfhe/scripts/: build.sh
orion/backend/openfhe/src/: bootstrapper.cpp  encoder.cpp  encryptor.cpp  evaluator.cpp  keygenerator.cpp  linear_transform.cpp  minheap.cpp  orion_openfhe.cpp  polyeval.cpp  scheme.cpp  tensors.cpp  utils.cpp
orion/backend/openfhe/tests/: test_orion_backend.cpp
orion/core/: orion.py
tests/backend/: README_TESTING.md  backend_bindings_comparison.md  run_compatibility_tests.py  test_backend_compatibility.py  test_config.py
tools/: build_setup.py
